MOBILE-4081 forum: Fix --addon-forum-highlight-color in dark mode

--- a/src/theme/theme.dark.scss
+++ b/src/theme/theme.dark.scss
@@ -159,5 +159,5 @@ html.dark {
     --core-messages-discussion-badge-text: var(--gray-100);
 
     --addon-forum-border-color: var(--gray-500);
-    --addon-forum-highlight-color: var(--gray-200);
+    --addon-forum-highlight-color: var(--gray-800);
 }
